--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.268.0",
