--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,9 +29,10 @@
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^2.25.0",
     "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.268.0",
     "next": "14.0.2",
     "postcss": "8.4.28",
