--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "react": "^18",
